Fixed all visible broken things

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>GSoC Orgs Viz</title>
+    <title>Visualize GSoC Data</title>
     <meta charset="utf-8">
-    <meta name="description" content="Get insight to GSoC participating organizations over years">
+    <meta name="description" content="Get insights to GSoC participating organizations over years">
     <meta name="keywords" content="JS,d3,GSoC,Google Summer of Code,Organizations">
     <meta name="author" content="Dipankar Patro">
 </head>
@@ -18,7 +18,7 @@
     #chart {
         margin: 10px auto;
         width: 80%;
-        height: 700px;
+        height: 900px;
     }
 
         #orginfo {
@@ -48,7 +48,7 @@
 <body>
 
 <div id="intro">
-    <p>This is a Google Summer of Code organizations details visualizer. [Currently under development.]</p>
+    <h2>This is a Google Summer of Code organizations details visualizer. [Currently under development.]</h2>
 
     <p>How to use:</p>
     <ol>
@@ -68,6 +68,10 @@
         <option value="" SELECTED>Select Data to Load</option>
         <option value="gsoc14.json">GSoC 2014</option>
         <option value="gsoc13.json">GSoC 2013</option>
+        <option value="gsoc12.json">GSoC 2012</option>
+        <option value="gsoc11.json">GSoC 2011</option>
+        <option value="gsoc10.json">GSoC 2010</option>
+        <option value="gsoc09.json">GSoC 2009</option>
     </select>
 </div>
 
